k8s/apps/repo-account/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: repo-account
  namespace: apps
  labels:
    app: repo-account
spec:
    type: ClusterIP
    selector:
      app: repo-account
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
