k8s/apps/repo-account/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: repo-account-network-policy
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: repo-account
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: # Allow public ingress
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-nginx-public
      ports:
        - protocol: TCP
          port: 8080
    - from: # Allow probe
        - ipBlock:
            cidr: 10.42.0.0/16
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: postgres
          podSelector:
            matchLabels:
              cnpg.io/cluster: postgres-cluster
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
